--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,6 +7,7 @@ variables:
   webRepository: 'web'
   tag: '$(Build.BuildId)'
   imagePullSecret: 'secret'
+  RegistryName: 'tailspinspacegame17818.azurecr.io'
 
 stages:
 - stage: 'Build'
