--- a/Tailspin.SpaceGame.Web/Dockerfile.develop
+++ b/Tailspin.SpaceGame.Web/Dockerfile.develop
@@ -1,18 +1,35 @@
+# Use .NET 8 SDK image for building and running the app
 FROM mcr.microsoft.com/dotnet/sdk:8.0
+
+# Set build configuration and environment variables
 ARG BUILD_CONFIGURATION=Debug
+ENV BUILD_CONFIGURATION=${BUILD_CONFIGURATION}
 ENV ASPNETCORE_ENVIRONMENT=Development
 ENV ASPNETCORE_URLS=http://+:80
 ENV DOTNET_USE_POLLING_FILE_WATCHER=true
+
+# Expose port 80 for the app
 EXPOSE 80
 
+# Set working directory inside container
 WORKDIR /src
-COPY ["Tailspin.SpaceGame.Web/Tailspin.SpaceGame.Web.csproj", "Tailspin.SpaceGame.Web/"]
 
+# Copy the .csproj and restore as distinct layers
+COPY ["Tailspin.SpaceGame.Web/Tailspin.SpaceGame.Web.csproj", "Tailspin.SpaceGame.Web/"]
 RUN dotnet restore "Tailspin.SpaceGame.Web/Tailspin.SpaceGame.Web.csproj"
+
+# Copy the rest of the app
 COPY . .
+
+# Set working directory to the project folder
 WORKDIR "/src/Tailspin.SpaceGame.Web"
+
+# Build the project
 RUN dotnet build --no-restore "Tailspin.SpaceGame.Web.csproj" -c $BUILD_CONFIGURATION
 
-RUN echo "exec dotnet run --no-build --no-launch-profile -c $BUILD_CONFIGURATION --" > /entrypoint.sh
+# Create an entrypoint script that runs the app
+RUN echo "exec dotnet run --no-build --no-launch-profile -c \$BUILD_CONFIGURATION --" > /entrypoint.sh \
+    && chmod +x /entrypoint.sh
 
+# Run the entrypoint script
 ENTRYPOINT ["/bin/bash", "/entrypoint.sh"]
