--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,37 +7,38 @@ variables:
   webRepository: 'web'
   tag: '$(Build.BuildId)'
   imagePullSecret: 'secret'
-  RegistryName: 'tailspinspacegame17818.azurecr.io'
+  acrServiceConnection: 'Container Registry Connections'
+  acrLoginServer: 'tailspinspacegame17818.azurecr.io'
 
 stages:
 - stage: 'Build'
   displayName: 'Build and push'
   jobs:  
     - job: 'Build'
-      displayName: 'Build job'
+      displayName: 'Build Docker images'
       pool:
         vmImage: 'ubuntu-22.04'
+
       steps:
         - task: Docker@2
-          displayName: 'Build and push the image to container registry'
+          displayName: 'Build & Push Web Image'
           inputs:
             command: buildAndPush
             buildContext: $(Build.Repository.LocalPath)
             repository: $(webRepository)
             dockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/Dockerfile'
-            containerRegistry: 'Container Registry Connections'
+            containerRegistry: $(acrServiceConnection)
             tags: |
               $(tag)
 
-
         - task: Docker@2
-          displayName: 'Build and push the leaderboard image to container registry'
+          displayName: 'Build & Push Leaderboard Image'
           inputs:
             command: buildAndPush
             buildContext: $(Build.Repository.LocalPath)
             repository: $(leaderboardRepository)
             dockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.LeaderboardContainer/Dockerfile'
-            containerRegistry: 'Container Registry Connections'
+            containerRegistry: $(acrServiceConnection)
             tags: |
               $(tag)
 
@@ -49,7 +50,7 @@ stages:
   dependsOn: Build
   jobs:
     - deployment: Deploy
-      displayName: Deploy
+      displayName: Deploy to AKS
       pool:
         vmImage: 'ubuntu-22.04'
       environment: 'kubernetesdev'
@@ -63,7 +64,7 @@ stages:
                 artifact: manifests
 
               - task: KubernetesManifest@1
-                displayName: Deploy to Kubernetes cluster
+                displayName: 'Deploy to AKS'
                 inputs:
                   action: deploy
                   connectionType: azureResourceManager
@@ -77,7 +78,5 @@ stages:
                   imagePullSecrets: |
                     $(imagePullSecret)
                   containers: |
-                    $(RegistryName)/$(webRepository):$(tag)
-                    $(RegistryName)/$(leaderboardRepository):$(tag)
-
- 
+                    $(acrLoginServer)/$(webRepository):$(tag)
+                    $(acrLoginServer)/$(leaderboardRepository):$(tag)
