--- a/Tailspin.SpaceGame.LeaderboardContainer/Dockerfile.develop
+++ b/Tailspin.SpaceGame.LeaderboardContainer/Dockerfile.develop
@@ -1,18 +1,27 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0
+
 ARG BUILD_CONFIGURATION=Debug
+
 ENV ASPNETCORE_ENVIRONMENT=Development
 ENV ASPNETCORE_URLS=http://+:80
 ENV DOTNET_USE_POLLING_FILE_WATCHER=true
+
 EXPOSE 80
 
 WORKDIR /src
+
 COPY ["Tailspin.SpaceGame.LeaderboardContainer/Tailspin.SpaceGame.LeaderboardContainer.csproj", "Tailspin.SpaceGame.LeaderboardContainer/"]
 
 RUN dotnet restore "Tailspin.SpaceGame.LeaderboardContainer/Tailspin.SpaceGame.LeaderboardContainer.csproj"
+
 COPY . .
+
 WORKDIR "/src/Tailspin.SpaceGame.LeaderboardContainer"
+
 RUN dotnet build --no-restore "Tailspin.SpaceGame.LeaderboardContainer.csproj" -c $BUILD_CONFIGURATION
 
-RUN echo "exec dotnet run --no-build --no-launch-profile -c $BUILD_CONFIGURATION --" > /entrypoint.sh
+# Create an entrypoint script for running the app in development
+RUN echo '#!/bin/bash\nexec dotnet run --no-build --no-launch-profile -c $BUILD_CONFIGURATION --' > /entrypoint.sh \
+    && chmod +x /entrypoint.sh
 
 ENTRYPOINT ["/bin/bash", "/entrypoint.sh"]
